--- a/states/home/home.html
+++ b/states/home/home.html
@@ -23,7 +23,7 @@ These are not comprehensive walkthroughs, but bits and pieces--that are continuo
 
 
 </pre>
-<footer class="dkbg3 sm comfort"><ul><li><a target="_blank" href="https://github.com/Beauvelop">github</a></li>
+<footer class="grade-bg sm comfort"><ul><li><a target="_blank" href="https://github.com/Beauvelop">github</a></li>
   <li><a href="https://codepen.io/beau_dev/" target="_blank">codepen</a></li>
   <li><a target="_blank" href="https://twitter.com/beau_dev">twitter</a></li></ul>
   <h6 class="chtitle sm dkorange">No claim of copyright (nor of expertise for that matter). --On the contrary, please use what you find here in your own study. Follow the exercises & the links provided! Be patient and painstaking. <br>@ me on <span class=""><a target="_blank" href="https://twitter.com/beau_dev">twitter</a> if you have a question.</span></h6>
