--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -18,6 +18,20 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Tuesday June 13th, 2017</h2>
+  <h4 class="sleep">Slept: 7 hours</h4><br><br>
+  <h3 class="subtitle">Worked late through the night. Pushed lots and lots yesterday. Grid line-based positioning absolutely rocks. Cleaned up the jq view a bit--It looks less like a disaster.<br /><br />I don't want to bike-shed all day with styling this app. The grid project is demanding. There's a 3d aspect that is going to hit me. #techdebt. I never <em>truly, deeply</em> understood translate3d(); in a comprehensive way. It's time. Tech-debt collector is going to be on the phone.</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>PlaceholderForTasks</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
   <h2 class="date">Monday June 12th, 2017</h2>
   <h4 class="sleep">Slept: 5 hours</h4><br><br>
   <h3 class="subtitle">Finished first study of a detail of this photo: <img class="w10" src="./img/window1.png" alt="window detail of larger painting">
@@ -62,7 +76,7 @@
   <h4 class="sleep">Slept: 6 hours</h4><br><br>
   <h3 class="subtitle">Had a revelation about a project in CSS. It will require 3 weeks-ish to put together. It will require another view to be added to codejournal: css-grid. The views in the nav-bar are too many and unwieldy. It's time to further separate those concerns & modularize that puppy! Will get to work on that today & deploy soon.
 <br>
-  <h5><br />Question: Am I putting off saving all of these notes into a postgres db? <br>Answer: "Yes, probably" <br>Reason: "I'm scared of breaking shit." <br />Retort: "Fear of breaking shit prevents growth. Breaking shit is how you learn. Breaking shit is why you are here."<br />Conclusion: "I'll get into it this weekend" <br /> Reflection: "Now is the time to learn & break shit so it don't get broke in production." <br>Advice: "Start small and iterate over it...and stop swearing so much"</h5></h3>
+  <h5><br />Question: Am I putting off saving all of these notes into a postgres db? <br>Answer: "Yes, probably" <br>Reason: "I'm scared of breaking stuff." <br />Retort: "Fear of breaking stuff prevents growth. Breaking stuff is how you learn. Breaking stuff is why you are here."<br />Conclusion: "I'll get into it this weekend" <br /> Reflection: "Now is the time to learn & break stuff so it don't get broke in production." <br>Advice: "Start small and iterate over it...and stop swearing so much"</h5></h3>
 
   <br>
   <h3>To do:</h3>
@@ -302,7 +316,7 @@ I'm about to get back into GSAP in prep for a foray into some light animation ke
   <h3>Done: </h3>
   <ol class="done">
     <li>let adjective = `useful`;  `Template literals are ${adjective}!`;  </li>
-    <li>Object.assign() --amazing! <a href="https://youtu.be/vM7Tif98Dlo" target="_blank">Here's a helpful (albeit annoying) link</a></li>
+    <li>Object.assign() --amazing! <a href="https://youtu.be/vM7Tif98Dlo" target="_blank">Here's a helpful (albeit slightly obnoxious) video</a></li>
     <li>Lots of work done on call(); and apply();</li>
     <li>added project of randomized quiz --visible in 'misc' view.</li>
 
