--- a/states/angular/angular.html
+++ b/states/angular/angular.html
@@ -571,7 +571,7 @@ This function, then fires at:
 
 <div class="simple-frame">
   <h4>A word about scope and modeling (scope inheritance)</h4>
-I. This example shows modeling as property on an Obj. This is best practice and exploits the advantages of ang's scope inheritance.
+<h1 class="purp">I.</h1> This example shows modeling as property on an Obj. This is best practice and exploits the advantages of ang's scope inheritance.
 TL;DR --> input in any field, entire scope gets updated.
 <pre class="framed4 w50">
   < div > <span class="transGreen">//root scope</span>
@@ -589,7 +589,7 @@ TL;DR --> input in any field, entire scope gets updated.
     < h3>Msg: {{<span class="ltblue">data<b class="ltred">.</b>msg</span>}}< /h3 >
   < /div> </pre>
 
-II. This example "breaks" the scope. The model in {{<em class="y">message</em>}} is essentially being overwritten.
+<h1 class="purp">II.</h1> This example "breaks" the scope. The model in {{<em class="y">message</em>}} is essentially being overwritten.
 TL;DR type in any box, only the model scoped to that input field is updated.
   <pre class="framed4 w50">
     < div > <span class="transGreen">//root scope</span>
@@ -608,7 +608,8 @@ TL;DR type in any box, only the model scoped to that input field is updated.
     < /div> </pre>
 One more thing about the example I. above:
   <span class="med purp">firstCtrl & secondCtrl inherit from root. --Take the first div away and you have two siblings that don't update each other.</span>
-III.<hr>
+<hr>
+<h1 class="purp">III.</h1>
 <h3 class="dkred">The problem:</h3> the 2 controllers don't share scope.
 
 <h3 class="dkred">The solution: </h3> create a service (as a factory) that returns smth that references that prop on the object inside "{ {} }"
